--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,3 +9,27 @@
     --heading-font: 'Madimi One', sans-serif; 
     --paragraph-font: 'Roboto', sans-serif;
 }
+
+nav {
+	background-color: #36454f;
+	margin: 0 auto;
+	max-width: 800px;
+}
+nav ul {
+	list-style-type: none;
+}
+nav a {
+	display: block;
+	color: #fff;
+	text-align: center;
+	padding: 1rem;
+	text-decoration: none;
+}
+
+nav a:hover {
+	text-decoration:overline;
+}
+
+.active {
+	color: yellow;
+}
