--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 }
 
 nav {
-	background-color: #36454f;
+	background-color: var(--primary-color);
 	margin: 0 auto;
 	max-width: 800px;
 }
@@ -20,7 +20,7 @@ nav ul {
 }
 nav a {
 	display: block;
-	color: #fff;
+	color: var(--accent1-color);
 	text-align: center;
 	padding: 1rem;
 	text-decoration: none;
@@ -31,5 +31,15 @@ nav a:hover {
 }
 
 .active {
-	color: yellow;
+	color: var(--accent2-color);
+}
+
+/* Larger Views ******************************/
+@media (min-width: 640px) {
+	nav ul {
+		display: flex;
+	}
+	nav ul li {
+		flex: 1 1 100%;
+	}
 }
