--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,35 @@
     --paragraph-font: 'Roboto', sans-serif;
 }
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: "Sansita", sans-serif;
+}
+
+/* mobile **************************/
+header {
+	background-color: #bbb;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+header,
+main {
+	margin: 0 auto;
+}
+
+h1 {
+	font-size: 2rem;
+}
+
 nav {
 	background-color: var(--primary-color);
 	margin: 0 auto;
