--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ header img {
 
 /* mobile **************************/
 header {
-	background-color: #bbb;
+	background-color: var(--accent1-color);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -53,7 +53,7 @@ nav ul {
 }
 nav a {
 	display: block;
-	color: var(--accent1-color);
+	color: var(--secondary-color);
 	text-align: center;
 	padding: 1rem;
 	text-decoration: none;
