--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,10 @@ header {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+header img {
+    margin-right: 10px;
+}
+
 header,
 main {
 	margin: 0 auto;
@@ -43,14 +47,29 @@ h1 {
 	font-size: 2rem;
 }
 
+.hamburger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+}
+
+.hamburger div {
+    margin: 3px;
+    width: 30px;
+    height: 5px;
+    background-color: var(--secondary-color);  
+}
+
 nav {
 	background-color: var(--primary-color);
 	margin: 0 auto;
 	max-width: 800px;
 }
+
 nav ul {
 	list-style-type: none;
 }
+
 nav a {
 	display: block;
 	color: var(--secondary-color);
@@ -67,6 +86,41 @@ nav a:hover {
 	color: var(--accent2-color);
 }
 
+main {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: space-evenly;
+    padding: 1.5rem;
+}
+
+.courseWork ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+}
+
+.module {
+    background-color: var(--accent1-color);
+    flex: 1;
+    min-width: 350px;
+    padding: 1rem;
+    border: 1px solid var(--primary-color);
+    border-radius: 10px;
+}
+
+.module h2 {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    padding: 0.5rem;
+    margin: -1rem -1rem 1rem -1rem;
+    border-radius:10px 10px 0px 0px;
+    text-align: center;
+}
+
+.utah img {
+    height: auto;
+    width: 100%;
+}
 /* Larger Views ******************************/
 @media (min-width: 640px) {
 	nav ul {
