--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
     --secondary-color: #f9fafa;
     --accent1-color: #d5d8d9;
     --accent2-color: #f2b143;
+    --accent3-color: #566872;
 
     --heading-font: 'Madimi One', sans-serif; 
     --paragraph-font: 'Roboto', sans-serif;
@@ -104,8 +105,9 @@ main {
     flex: 1;
     min-width: 350px;
     padding: 1rem;
-    border: 1px solid var(--primary-color);
+    border: 2px solid var(--secondary-color);
     border-radius: 10px;
+    box-shadow: 2px 2px 5px var(--primary-color);
 }
 
 .module h2 {
@@ -121,6 +123,65 @@ main {
     height: auto;
     width: 100%;
 }
+
+figcaption {
+    padding-top: 1rem;
+    text-align: center;
+}
+
+.certificateFilter {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid var(--primary-color);
+}
+
+.filterButton {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    width: 10rem;
+    
+}
+
+.filterButton.active {
+    background-color: var(--primary-color);
+    font-weight: bold;
+}
+
+.coursesList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.courseBlock {
+    border-radius: .5rem;
+    padding: 15px;
+    flex: 0 0 25%;
+    margin: .5rem;
+    background-color: var(--secondary-color);
+    text-align: center;
+}
+
+.courseBlock.complete {
+    background-color: var(--accent3-color);
+    color: var(--secondary-color);
+}
+
+footer {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    text-align: center;
+    padding: 10px;
+}
+/* Smaller Views ******************************/
+@media (max-width: 639px) {
+    .courseBlock {
+        flex: 0 0 100%;
+    }
+}
+
 /* Larger Views ******************************/
 @media (min-width: 640px) {
 	nav ul {
