--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,7 +143,8 @@ figcaption {
     margin-right: 1rem;
     margin-bottom: 1rem;
     width: 10rem;
-    
+    border-radius: 1rem;
+    padding: 5px;
 }
 
 .filterButton.active {
