--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,6 +176,12 @@ figcaption {
     color: black;
 }
 
+#totalCredits h3 {
+    margin-top: 20%;
+    text-align: center;
+    bottom: 1px;
+}
+
 footer {
     background-color: var(--primary-color);
     color: var(--secondary-color);
