--- a/chamber/styles/common.css
+++ b/chamber/styles/common.css
@@ -16,7 +16,6 @@ body {
 
 header {
     background-color: var(--accent2-color);
-    /* margin-bottom: 0; */
 }
 
 nav {
@@ -71,4 +70,22 @@ li.currentMenuItem {
 
 nav.open {
     grid-template-rows: 1fr;
+}
+
+/* Footer */
+footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: var(--accent2-color);
+    position: absolute;
+    bottom: 0;
+    height: auto;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerCell {
+    padding: 8px;
+    padding-top: 20px;
 }
