--- a/chamber/styles/common.css
+++ b/chamber/styles/common.css
@@ -17,11 +17,12 @@ body {
 
 header {
     background-color: var(--accent2-color);
+    display: flex;
 }
 
 header img {
     width: 100px;
-    margin: 5px;
+    margin: 10px;
 }
 
 nav {
