--- a/chamber/styles/common.css
+++ b/chamber/styles/common.css
@@ -1,5 +1,3 @@
-@import url("./large.css");
-
 :root {
     --primary-color: #255876;
     --secondary-color: #f9fafa;
@@ -112,4 +110,29 @@ footer {
 
 .footerCell p {
     padding: 0;
+}
+
+/* Large CSS */
+@media only screen and (min-width: 38rem) {
+    #navButton {
+        display: none;
+        
+    }
+
+    nav {
+        grid-template-rows: 1fr !important;
+    }
+
+    ul.menuLinks, ul.menuLinks.open {
+        display: flex !important;
+        justify-content: flex-end;
+    }
+
+    ul.menuLinks a:hover {
+        background-color: rgba(255,255,255,0.2);
+    }
+
+    footer {
+        grid-template-columns: 1fr 1fr 1fr !important;
+    }
 }
