--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -1,1 +1,15 @@
 @import url("./common.css");
+
+main {
+    height: 100%;
+}
+
+.heroImage {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/city_of_naples.jpg");
+    height: 100%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
