--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -39,8 +39,11 @@
      -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
           box-shadow: inset 0px 0px 5px #c1c1c1;
    outline: none;
+
 }
 
 main {
     text-align: center !important;
+    display: flex;
+    flex-direction: column;
 }
