made the css more concise

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -6,7 +6,6 @@
 
 .oneColGrid {
     grid-template-columns: 1fr;
-    /* max-width: 50%; */
 }
 
 #membersList {
@@ -53,13 +52,8 @@ main {
         display: none;
     }
 
-    .threeColGrid {
+    .threeColGrid, .oneColGrid {
         grid-template-columns: 1fr;
-    }
-    
-    .oneColGrid {
-        grid-template-columns: 1fr;
-        /* max-width: 50%; */
     }
 }
 
