--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -5,11 +5,19 @@ main {
 }
 
 .heroImage {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/city_of_naples.jpg");
-    height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/naples_park_banner.jpg");
+    height: 100vh;
 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+}
+
+.heroContent {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
