--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -66,15 +66,18 @@ section h2 {
     grid-column: 3/4;
 }
 
-.currentWeatherDetails {
+#currentWeatherDetails {
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
 
 #currentWeatherText p {
-    padding: 1vh;
+    padding: 2px;
     margin: 0;
-    font-size: smaller;
+}
+
+#currentWeatherTemp {
+    padding-top: 1rem !important;
 }
 
 #currentWeatherIcon {
