got a rough version of business cards added

--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -88,3 +88,12 @@ section h2 {
 #currentWeatherDescription {
     text-transform: capitalize;
 }
+
+.businessCards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.businessCards figure img {
+    height: 50px;
+}
