--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -50,7 +50,7 @@ section h2 {
     padding-top: 5px;
 }
 
-.infoBoxes > div > h3,p {
+.infoBoxes > div > h3,p,a {
     padding-left: 10px;
 }
 
@@ -92,8 +92,49 @@ section h2 {
 .businessCards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    
 }
 
 .businessCards figure img {
     height: 50px;
+    grid-column: 1/2 !important;
+}
+
+.businessCards figure figcaption > p,a {
+    font-size: small;
+    color: var(--secondary-color);
+}
+
+.businessCards figure {
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 0;
+    margin: 0;
+    justify-self: left;
+    padding-left: 1vw;
+}
+
+.businessCard {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    justify-items: center;
+    margin: 5px;
+    background-color: var(--primary-color);
+    border-radius: 5%;
+}
+
+.businessCard h3 {
+    grid-column: 1/3;
+    padding: 0;
+    margin: 0;
+    color: var(--secondary-color);
+    text-align: center;
+    padding-top: 5px !important;
+    border-bottom: 1px solid var(--secondary-color);
+}
+
+.businessCard figure figcaption {
+    grid-column: 2/3;
 }
