--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -139,6 +139,15 @@ section h2 {
     grid-column: 2/3;
 }
 
+#joinButton {
+    width: 25%;
+    font-size: larger;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border: none;
+    border-radius: 1rem;
+}
+
 @media only screen and (max-width: 37.999rem) {
 
     #events, #currentWeather, #weatherForecast {
