--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -1,10 +1,8 @@
 @import url("./common.css");
 
-form {
-    
+main h2 {
+    text-align: center;
 }
-
-
 
 .membershipLevelInput label:nth-of-type(1) {
     background-color: #CD7F32;
@@ -61,7 +59,34 @@ dialog {
     transform: translateX(-50%) translateY(-50%);
 }
 
+#levelHelp {
+    color: blue;
+}
+
+#levelHelp:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
 form {
+    padding-top: 20px;
+    background-color: rgb(242, 177, 67, 0.5);
     margin: 1rem 2%;
     display: flex;
     flex-direction: column;
@@ -85,6 +110,7 @@ form {
     input[type=tel],
     input[type=date],
     input[type=email],
+    textarea,
     select {
       display: block;
       margin: .1rem 0 1rem 0 ;
@@ -92,9 +118,10 @@ form {
       border: 1px solid #999;
       border-radius: 4px;
       border-left-width: 5px;
-      border-left-color:#555;
+      border-left-color:var(--primary-color);
+      font-family: var(--paragraph-font);
       font-size: 1rem;
-      color: #3D405B;
+      color: black;
       width: 250px;
     }
   
@@ -105,7 +132,7 @@ form {
     input[type=submit] {
       border: none;
       text-align: center;
-      background-color: #3D405B;
+      background-color: var(--primary-color);;
       color: white;
       border-radius: 1rem;
       padding: .75rem 1.5rem;
