--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -85,64 +85,65 @@ tr:nth-child(even) {
 }
 
 form {
-    padding-top: 20px;
-    background-color: rgb(242, 177, 67, 0.5);
-    margin: 1rem 2%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: left;
-    border-radius: 1rem;
+  padding-top: 20px;
+  background-color: rgb(242, 177, 67, 0.5);
+  margin: 1rem 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  border-radius: 1rem;
+}
+label {
+  display: block;
+  font-size: .8rem;
+  color: black;
+  padding-top: .2rem;
+}
   
-    label {
-      display: block;
-      font-size: .8rem;
-      color: black;
-      padding-top: .2rem;
-    }
-    h3 {
-      font-size: .9rem;
-      color: #E07A5F;
-      margin: 1.5rem 0 .2rem 0;
-      border-bottom: 1px solid #eee;
-    }
-  
-    input[type=text],
-    input[type=tel],
-    input[type=date],
-    input[type=email],
-    textarea,
-    select {
-      display: block;
-      margin: .1rem 0 1rem 0 ;
-      padding: .3rem;
-      border: 1px solid #999;
-      border-radius: 4px;
-      border-left-width: 5px;
-      border-left-color:var(--primary-color);
-      font-family: var(--paragraph-font);
-      font-size: 1rem;
-      color: black;
-      width: 250px;
-    }
-  
-    input:required {border-left-color: #d70000;}
-    input:focus {border-left-color: black; outline:none;}
-    input:required:valid{border-left-color: green;}
-  
-    input[type=submit] {
-      border: none;
-      text-align: center;
-      background-color: var(--primary-color);;
-      color: white;
-      border-radius: 1rem;
-      padding: .75rem 1.5rem;
-      margin: 2rem 0;
-      font-size: 1.2rem;
-      -webkit-appearance: none;
-      appearance: none;
-    }
-  }
-  input:-webkit-autofill{
-    -webkit-text-fill-color: #3D405B;
-  }
+form h3 {
+  font-size: .9rem;
+  color: #E07A5F;
+  margin: 1.5rem 0 .2rem 0;
+  border-bottom: 1px solid #eee;
+}
+
+input[type=text],
+input[type=tel],
+input[type=date],
+input[type=email],
+textarea,
+select {
+  display: block;
+  margin: .1rem 0 1rem 0 ;
+  padding: .3rem;
+  border: 1px solid #999;
+  border-radius: 4px;
+  border-left-width: 5px;
+  border-left-color:var(--primary-color);
+  font-family: var(--paragraph-font);
+  font-size: 1rem;
+  color: black;
+  width: 250px;
+}
+
+input:required {border-left-color: #d70000;}
+input:focus {border-left-color: black; outline:none;}
+input:required:valid{border-left-color: green;}
+
+input[type=submit] {
+  border: none;
+  text-align: center;
+  background-color: var(--primary-color);;
+  color: white;
+  border-radius: 1rem;
+  padding: .75rem 1.5rem;
+  margin: 2rem 0;
+  font-size: 1.2rem;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+input:-webkit-autofill{
+  -webkit-text-fill-color: #3D405B;
+}
