--- a/sourdough/styles/common.css
+++ b/sourdough/styles/common.css
@@ -11,11 +11,20 @@
 
 #sitePlan {
     background-color: var(--accent2-color);
-    p {
+    p, li {
         color: var(--primary-color);
+        font-family: var(--paragraph-font);
     };
+
+    h1 {
+        color: var(--accent3-color);
+        font-family: var(--heading-font);
+    }
+
 
     img {
         width: 500px;
     }
+
+
 }
