--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -1,1 +1,92 @@
 @import url("./common.css");
+
+#discoverContent {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows:5% 95%;
+}
+
+#welcomeText {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.sideBar {
+    grid-column: 1/2;
+    grid-row: 2/5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imageBar {
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.imageBar > img {
+    max-width:50%;
+    margin: 15px;
+}
+
+.calendar {
+    max-width: 300px;
+    background-color: #FFF;
+    border-radius: 0.8rem;
+    box-shadow: 0 0.8rem 1.6rem rgba(35, 131, 157, 0.2);
+    padding: 1rem;
+  }
+  .calendar__header {
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    letter-spacing: 0.2rem;
+    padding: 0 0.4rem 1.2rem;
+    text-transform: uppercase;
+  }
+  .calendar__day-names {
+    border-bottom: 0.1rem solid #828889;
+    display: flex;
+    gap: 1.2rem;
+    margin-bottom: 0.8rem;
+    padding: 0.8rem 0;
+  }
+  .calendar__day-name {
+    aspect-ratio: 1;
+    color: #828889;
+    font-weight: normal;
+    text-align: center;
+    width: 2.4rem;
+  }
+  .calendar__day_numbers {
+    display: flex;
+    flex-direction: column;
+  }
+  .calendar__day-numbers-row {
+    display: flex;
+    gap: 1.2rem;
+    padding: 0.6rem 0;
+  }
+  .calendar__day-numbers-row:first-child {
+    justify-content: flex-end;
+  }
+  .calendar__day-number {
+    align-content: center;
+    justify-content: center;
+    aspect-ratio: 1;
+    color: #000;
+    display: flex;
+    line-height: 1.4;
+    text-align: center;
+    width: 2.4rem;
+  }
+  .calendar__day-number--current {
+    background-color: var(--accent2-color);
+    border-radius: 50%;
+    box-shadow: 0 0 0 0.4rem #f2b2435b;
+    color: #000;
+  }
