--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -19,6 +19,13 @@
     flex-direction: column;
     align-items: center;
 }
+.sideBar h2 {
+    text-align: center;
+}
+
+#eventImage {
+    max-width: 100%;
+}
 
 .imageBar {
     grid-column: 2/3;
