--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -13,6 +13,8 @@
     text-align: center;
 }
 
+
+
 .sideBar {
     grid-column: 1/2;
     grid-row: 2/5;
@@ -133,5 +135,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+@media only screen and (mix-width: 38rem) {
+  img:hover {
+    -moz-box-shadow: 1px 1px 5px #999;
+    -webkit-box-shadow: 1px 1px 5px #999;
+    box-shadow: 1px 1px 5px #999;
   }
 }
