--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -139,7 +139,7 @@
   }
 }
 
-@media only screen and (min-width: 38rem) {
+@media only screen and (min-width: 38em) {
   img:hover {
     -moz-box-shadow: 1px 1px 5px #999;
     -webkit-box-shadow: 1px 1px 5px #999;
