--- a/sourdough/styles/recipes.css
+++ b/sourdough/styles/recipes.css
@@ -25,6 +25,10 @@
     width: 200px;
 }
 
+#dynamicText {
+    text-align: center;
+}
+
 /* Large CSS */
 @media only screen and (min-width: 38rem) {
     #recipesGrid {
