--- a/sourdough/styles/index.css
+++ b/sourdough/styles/index.css
@@ -77,7 +77,7 @@ main {
 @media only screen and (min-width: 38rem) {
     #sourdoughGuides {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 50% 50% !important;
     }
 
     #sourdoughStarter {
